--- a/deliveryfrontend/src/app/app.component.html
+++ b/deliveryfrontend/src/app/app.component.html
@@ -24,13 +24,14 @@
   <div class="tabela">
 
     
-    <p-table [value]="cozinhas">
+    <p-table [value]="cozinhas" [paginator]="true" [rows]="2" [responsive]="true">
       <ng-template pTemplate="header">
         <tr>
           <th>Code</th>
           <th>Name</th>
           <th>Category</th>
           <th>Quantity</th>
+          <th class="delete-class">Delete</th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-cozinha>
@@ -39,10 +40,14 @@
           <td>{{cozinha.name}}</td>
           <td>{{cozinha.code}}</td>
           <td>{{cozinha.quantity}}</td>
+          <button class="delete-button" pButton icon="fa fa-trash-o" data-toggle="tooltip" data-placement="bottom"
+          title="Delete"></button>
         </tr>
       </ng-template>
     </p-table>
   </div>
+
+  
 
 </div>
 
