Front End Get Funcional

--- a/deliveryfrontend/src/styles.css
+++ b/deliveryfrontend/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+
+body .ui-inputtext.ng-touched.ng-invalid,
+body p-dropdown.ng-touched.ng-invalid > .ui-dropdown,
+body p-autocomplete.ng-touched.ng-invalid > .ui-autocomplete > .ui-inputtext,
+body p-calendar.ng-touched.ng-invalid > .ui-calendar > .ui-inputtext,
+body p-chips.ng-touched.ng-invalid > .ui-inputtext,
+body p-inputmask.ng-touched.ng-invalid > .ui-inputtext,
+body p-checkbox.ng-touched.ng-invalid .ui-chkbox-box,
+body p-radiobutton.ng-touched.ng-invalid .ui-radiobutton-box,
+body p-inputswitch.ng-touched.ng-invalid .ui-inputswitch,
+body p-listbox.ng-touched.ng-invalid .ui-inputtext,
+body p-multiselect.ng-touched.ng-invalid > .ui-multiselect,
+body p-spinner.ng-touched.ng-invalid > .ui-inputtext,
+body p-selectbutton.ng-touched.ng-invalid .ui-button,
+body p-inputtext.ng-touched.ng-invalid .ui-button,
+body p-togglebutton.ng-touched.ng-invalid .ui-button {
+  border: 1px solid #a80000 !important;
+}
