--- a/deliveryfrontend/src/app/app.component.html
+++ b/deliveryfrontend/src/app/app.component.html
@@ -1,58 +1,4 @@
-<div class="container">
-  <div>
-    <h1>Cozinha</h1>
-  </div>
-
-  <div class="p-fluid">
-    <label class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Descrição</label>
-    <input pInputText type="text" />
-  </div>
-
-  <div class="p-formgroup-inline submit-grid">
-    <div class="p-field">
-      <label for="firstname" class="p-sr-only">Firstname</label>
-      <input id="firstname" type="text" pInputText placeholder="Firstname" />
-    </div>
-    <div class="p-field">
-      <label for="lastname" class="p-sr-only">Lastname</label>
-      <input id="lastname" type="text" pInputText placeholder="Lastname" />
-    </div>   
-  </div>
-
-  <button pButton type="button" label="Submit"></button> 
-  
-  <div class="tabela">
-
-    
-    <p-table [value]="cozinhas" [paginator]="true" [rows]="2" [responsive]="true">
-      <ng-template pTemplate="header">
-        <tr>
-          <th>Code</th>
-          <th>Name</th>
-          <th>Category</th>
-          <th>Quantity</th>
-          <th class="delete-class">Delete</th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-cozinha>
-        <tr>
-          <td>{{cozinha.code}}</td>
-          <td>{{cozinha.name}}</td>
-          <td>{{cozinha.code}}</td>
-          <td>{{cozinha.quantity}}</td>
-          <button class="delete-button" pButton icon="fa fa-trash-o" data-toggle="tooltip" data-placement="bottom"
-          title="Delete"></button>
-        </tr>
-      </ng-template>
-    </p-table>
-  </div>
-
-  
-
-</div>
-
-
-
+<app-restaurante-form></app-restaurante-form>
 
 
 
